--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <script src="./components/drank_bar.js" charset="utf-8"></script>
     <script src="./components/weekly_graph.js" charset="utf-8"></script>
     <script src="./components/overall_graph.js" charset="utf-8"></script>
-    <script src="index.js" charset="utf-8"></script>
+    <script src="./index.js" charset="utf-8"></script>
 
   </head>
   <body>
